node_modulesをvolumeにしてビルド一発で環境を作れるように

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,11 +4,14 @@ services:
   next-app:
     container_name: next-app
     build:
-      context: ./next-app/docker
-      dockerfile: Dockerfile
-    image: otaku-gpat:1.1
+      context: ./next-app
+      dockerfile: docker/Dockerfile
+    image: otaku-gpat:1.2
     command: [npm, run, dev]
     volumes:
       - ./next-app:/app
+      - node_modules:/app/node_modules
     ports:
       - 3000:3000
+volumes:
+  node_modules:
