--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,12 +6,10 @@ services:
     build:
       context: ./next-app
       dockerfile: docker/Dockerfile
-    image: otaku-gpat:1.2
+    image: otaku-gpat:1.3
     command: [npm, run, dev]
+    init: true
     volumes:
       - ./next-app:/app
-      - node_modules:/app/node_modules
     ports:
       - 3000:3000
-volumes:
-  node_modules:
