--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,9 +5,11 @@ services:
       context: ./next-app
       dockerfile: docker/Dockerfile
     image: otaku-gpat:1.3
-    command: [npm, run, dev]
+    command: [npm, run, debug]
     init: true
     volumes:
       - ./next-app:/app
     ports:
       - 3000:3000
+      - 9229:9229
+      - 9230:9230
