--- a/next-app/package.json
+++ b/next-app/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "compile": "graphql-codegen"
+    "compile": "graphql-codegen",
+    "debug": "NODE_OPTIONS='--inspect=0.0.0.0:9229' next dev"
   },
   "dependencies": {
     "@apollo/client": "^3.9.4",
