--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
       context: ./next-app
       dockerfile: docker/Dockerfile
     image: otaku-gpat:1.3
-    command: [npm, run, dev]
+    command: [npm, run, debug]
     init: true
     volumes:
       - ./next-app:/app
