--- a/next-app/package.json
+++ b/next-app/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "compile": "graphql-codegen",
-    "debug": "NODE_OPTIONS='--inspect=0.0.0.0:9229' next dev"
+    "debug": "NODE_OPTIONS='--inspect=0.0.0.0:9229' next dev",
+    "test": "vitest"
   },
   "dependencies": {
     "@apollo/client": "^3.9.4",
@@ -35,16 +36,20 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@testing-library/react": "^15.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
+    "jsdom": "^24.0.0",
     "postcss": "^8",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.14",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "vitest": "^1.5.0"
   }
 }
