--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,12 @@
 {
   "cSpell.words": [
-    "animethemeentries"
+    "anilist",
+    "animeresource",
+    "animetheme",
+    "animethemeentries",
+    "animethemes",
+    "artistsong",
+    "myanimelist",
+    "romaji"
   ]
 }
