暗黙のanyを排除

--- a/next-app/tsconfig.json
+++ b/next-app/tsconfig.json
@@ -12,6 +12,7 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
+    "noImplicitAny": true,
     "plugins": [
       {
         "name": "next"
@@ -20,7 +21,8 @@
     "paths": {
       "@/*": ["./src/*"]
     },
-    "noErrorTruncation": true
+    "noErrorTruncation": true,
+    "target": "ES2017"
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
