--- a/next-app/package.json
+++ b/next-app/package.json
@@ -20,6 +20,7 @@
     "@graphql-codegen/client-preset": "^4.2.2",
     "@graphql-typed-document-node/core": "^3.2.0",
     "@hookform/resolvers": "^3.3.4",
+    "@prisma/client": "^5.13.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@spotify/web-api-ts-sdk": "^1.2.0",
