--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,10 @@
+x-common-environment: &common-environment
+  MYSQL_ROOT_PASSWORD: dev
+  MYSQL_DATABASE: dev
+  MYSQL_USER: docker
+  MYSQL_PASSWORD: dev
+  MYSQL_PORT: 3306
+
 services:
   next-app:
     container_name: next-app
@@ -13,3 +20,18 @@ services:
       - 3000:3000
       - 9229:9229
       - 9230:9230
+    environment:
+      MYSQL_HOST: db
+      <<: *common-environment
+  db:
+    container_name: db
+    image: mysql:8.0-debian
+    ports:
+      - 3306:3306
+    environment:
+      <<: *common-environment
+    volumes:
+      - mysql-data:/var/lib/mysql
+
+volumes:
+  mysql-data:
