--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -1,6 +1,7 @@
 services:
   next-app:
     container_name: next-app
+    image: anitunes:1.5
     build:
       context: ./next-app
       dockerfile: docker/prod.Dockerfile
