--- a/next-app/package.json
+++ b/next-app/package.json
@@ -52,7 +52,7 @@
     "prettier-plugin-tailwindcss": "^0.5.14",
     "prisma": "^5.13.0",
     "tailwindcss": "^3.3.0",
-    "ts-node": "^10.9.2",
+    "tsx": "^4.17.0",
     "typescript": "^5.3.3",
     "vitest": "^1.5.0"
   }
