アーティスト名の重複を考慮して矛盾なくデータを大量挿入できるように

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,13 @@
 {
   "cSpell.words": [
+    "anidb",
     "anilist",
     "animeresource",
     "animetheme",
     "animethemeentries",
     "animethemes",
     "artistsong",
+    "kitsu",
     "myanimelist",
     "romaji"
   ]
