--- a/next-app/package.json
+++ b/next-app/package.json
@@ -38,6 +38,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@playwright/test": "^1.46.0",
     "@testing-library/react": "^15.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
